--- a/app/components/tweet.css
+++ b/app/components/tweet.css
@@ -44,3 +44,22 @@
   text-decoration: none;
 }
 
+.yt-video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  border-radius: 0.5rem;
+  background-color: #000;
+}
+
+.yt-video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  border-radius: 0.5rem;
+}
+
