--- a/app/globals.css
+++ b/app/globals.css
@@ -174,3 +174,12 @@ section {
     transform: rotate(360deg);
   }
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
