Card UI changes

--- a/app/components/Card.module.css
+++ b/app/components/Card.module.css
@@ -168,6 +168,8 @@
     font-variant: small-caps;
     font-size: calc(34px * var(--card-scale));
     letter-spacing: -0.01em;
+    margin-top: -5px;
+
 }
 
 .card__bottom {
