--- a/src/apps/Experience/Experience.css
+++ b/src/apps/Experience/Experience.css
@@ -27,7 +27,7 @@
 }
 
 .experience-role {
-  color: var(--app-text);
+  color: #fff;
   font-size: 14px;
   font-weight: 400;
   display: flex;
@@ -103,7 +103,7 @@
 }
 
 .education-field {
-  color: var(--app-text);
+  color: #fff;
   font-size: 14px;
   font-weight: 400;
   display: flex;
@@ -141,7 +141,9 @@
 }
 
 @media (hover: hover) and (pointer: fine) {
-  .education-item:hover {
+
+  .education-item:hover,
+  .experience-item:hover {
     background-color: rgba(255, 255, 255, 0.05);
   }
 }
