--- a/src/apps/Projects/Projects.css
+++ b/src/apps/Projects/Projects.css
@@ -164,3 +164,10 @@
     background-color: rgba(255, 255, 255, 0.05);
   }
 }
+
+@media (max-width: 480px) {
+  .folder-icon {
+    width: 22px;
+    height: 22px;
+  }
+}
